# mcp

./: README.md
servers/example_server/: pyproject.toml
servers/example_server/src/: main.py
servers/semantic_search/: README.md  pyproject.toml  test_search.py  test_server.py
servers/semantic_search/src/: config.py  main.py  search.py
