[project]
name = "example_server"
version = "0.1.0"
description = "Example server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
