[project]
name = "semantic-search-mcp-server"
version = "0.1.0"
description = "Semantic Search MCP Server with query expansion and summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.2.0",
    "qdrant-client==1.12.2",
    "litellm==1.59.8",
    "instructor==1.7.2",
    "pydantic",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
